# slam_dunk

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  install_rpildiar.sh  lidar.cc  lidar.h  playground_main.cc  plot.qml  proto_utils.cc  proto_utils.h  proto_utils_test.cc  runner_main.cc  visualizer_client.cc  visualizer_client.h
kalman_filter/: BUILD.bazel  kalman_filter.cc  kalman_filter.h  kalman_filter_test.cc  one_dimension_test.cc  two_dimensions_test.cc
proto/: BUILD.bazel  lidar_response.proto
protobuf-matchers/: BUILD
qt/: BUILD.bazel  plot.cc  plot.h  plot.qml  plot.qrc  run_rcc.sh  setup_qt.sh
qt/resources/: BUILD.bazel  plot_res.cc
testdata/: BUILD.bazel  lidar.txtpb
