load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./bazel-*/*",
        "./.git/*",
    ],
    lint_mode = "fix",
)

cc_library(
    name = "sdk",
    srcs = ["third_party/rplidar/libsl_lidar_sdk.a"],
    hdrs = glob(["third_party/rplidar/include/**/*.h"]),
)

cc_binary(
    name = "playground_main",
    srcs = ["playground_main.cc"],
    deps = [
        "sdk",
        ":lidar",
        "//proto:lidar_proto_cc",
        "@absl//absl/flags:flag",
        "@absl//absl/flags:parse",
        "@absl//absl/memory",
        "@absl//absl/status",
        "@absl//absl/strings:str_format",
        "@gflags",
        "@glog",
    ],
)

cc_library(
    name = "lidar",
    srcs = ["lidar.cc"],
    hdrs = ["lidar.h"],
    deps = [
        ":sdk",
        "@absl//absl/memory",
        "@absl//absl/status:statusor",
        "@absl//absl/strings:str_format",
    ],
)
