bazel_dep(name = "buildifier_prebuilt", version = "7.1.2", dev_dependency = True)

bazel_dep(name = "rules_foreign_cc", version = "0.13.0")
bazel_dep(name = "rules_cc", version = "0.0.16")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "abseil-cpp", version = "20240722.0", repo_name = "absl")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "glog", version = "0.7.1")
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "rules_proto", version = "7.1.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

all_content = """\
filegroup(
    name = "all",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
"""

http_archive(
    name = "rplidar_sdk",
    build_file_content = all_content,
    #    sha256 = "sha256-CPlAtKRvMKCSewPqe8AjnsA1CyWlnDFJJkMfU63dVZE=",
    strip_prefix = "rplidar_sdk-2025",
    urls = ["https://github.com/bashtavenko/rplidar_sdk/archive/refs/tags/v2025.tar.gz"],
)
