bazel_dep(name = "buildifier_prebuilt", version = "7.1.2", dev_dependency = True)

bazel_dep(name = "rules_foreign_cc", version = "0.13.0")
bazel_dep(name = "rules_cc", version = "0.0.16")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "abseil-cpp", version = "20240722.0", repo_name = "absl")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "glog", version = "0.7.1")
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf-matchers", version = "0.1.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

#http_archive(
#   name = "status_macros",
#   strip_prefix = "status_macros-0.0.1",
#   urls = ["https://github.com/jimrogerz/status_macros/archive/refs/tags/v0.0.1.tar.gz"],
#)

STATUS_MACROS_COMMIT = "c2fcdb9b0d29ae60470c98c0f6f8ea42daad942c"
http_archive(
    name = "status_macros",
    strip_prefix = "status_macros-" + STATUS_MACROS_COMMIT,
    url = "https://github.com/jimrogerz/status_macros/archive/%s.zip" % STATUS_MACROS_COMMIT,
)