cc_library(
    name = "kalman_filter",
    srcs = ["kalman_filter.cc"],
    hdrs = ["kalman_filter.h"],
    deps = ["@eigen"],
)

cc_test(
    name = "kalman_filter_test",
    srcs = ["kalman_filter_test.cc"],
    deps = [
        ":kalman_filter",
        "@absl//absl/strings:str_format",
        "@eigen",
        "@glog",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "one_dimension_test",
    srcs = ["one_dimension_test.cc"],
    deps = [
        ":kalman_filter",
        "@absl//absl/strings:str_format",
        "@glog",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "two_dimensions_test",
    srcs = ["two_dimensions_test.cc"],
    deps = [
        ":kalman_filter",
        "@absl//absl/strings:str_format",
        "@glog",
        "@googletest//:gtest_main",
    ],
)
