load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "lidar_proto",
    srcs = [
        "lidar_response.proto",
    ],
)

cc_proto_library(
    name = "lidar_proto_cc",
    deps = [
        ":lidar_proto",
    ],
)
