package(default_visibility = ["//visibility:public"])

cc_library(
    name = "plot",
    srcs = [
        "plot.cc",
        "//qt/resources",
    ],
    hdrs = ["plot.h"],
    deps = [
        "//:lidar",
        "//:qt",
        "@absl//absl/memory",
        "@absl//absl/status:statusor",
        "@absl//absl/strings",
    ],
)

filegroup(
    name = "qmls",
    srcs = glob(["*.qml"]),
)
